<resources>
    <string name="app_name">Pokemon Seeker</string>
    <string name="play_game">Play Game!</string>
    <string name="action_settings">Settings</string>
    <string name="pokemon_seeker">Pokemon Seeker</string>
    <string name="by_kenneth_liang_and_william_fung">By: Kenneth Liang and William Fung</string>
    <string name="welcome">WELCOME!</string>
    <string name="skip">Skip</string>
    <string name="todo">TODO</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_options">Options</string>
    <string name="board_size">Board Size</string>
    <string name="options">Options</string>
    <string name="best_scores">Best Scores: </string>
    <string name="best_score_of_configuration">0</string>
    <string name="reset_best_scores">Reset best scores</string>
    <string name="number_of_times_played">Number of times played: </string>
    <string name="number_of_times_played_of_player">0</string>
    <string name="reset_number_of_times_played">Reset times played</string>
    <string name="help">Help</string>
    <string name="about_the_author">About the author: </string>
    <string name="CMPT276_Link">
        <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">CMPT276 Home Page</a>
    </string>
    <string name="number_of_pokemons">Number Of Pokemons</string>
    <string-array name="boardSizes">
        <item>4 by 6</item>
        <item>5 by 10</item>
        <item>6 by 15</item>
    </string-array>

    <string-array name="numberOfMines">
        <item>6 mines</item>
        <item>10 mines</item>
        <item>15 mines</item>
        <item>20 mines</item>
    </string-array>
    <string name="title_activity_help">Help</string>
    <string name="game_over">GAME OVER</string>
    <string name="congrast_you_won">Congratulations! You won!</string>
    <string name="ok">OK</string>
    <string name="title_activity_game">Game</string>
    <string name="found_number_of_pokemons">Found 0 of 0 Pokemons</string>
    <string name="number_of_scan_used_text"># of Scans used: </string>
    <string name="scans_used">0</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="how_to_play">How to Play:</string>
    <string name="instructions">
        Pokemon seeker is a game based on the original Mine seeker game. The player clicks on a pokeball to find the hidden charzard, that is randomly located in any of the
        pokeballs. If the pokeball contains a pokemon, it is revealed to the player, otherwise it performs a scan on its respective row and column to indicate how many pokemon are
        located in its respective column and row. The goal of the game is to find all the charzards in the least amount of scans.
    </string>
    <string name="about_author">
        Both William and Kenneth are third year CMPT Major students attending Simon Fraser University
    </string>
    <string name="resources">Resources:</string>
    <string name="your_score_is">Your Score is: 0</string>

    <string name="resource_links">
        <a href = "https://wallup.net/pokemon-16/">Background</a>
        <a href="https://pngimage.net/pokeball-open-png-7/?fbclid=IwAR3-Mer4wz7B7Nz9oFT7YY_HJ_pZKSf7OAgb7d3eMCB-zuicQgq_bu4er40">Pokeball Image</a>
        <a href = "https://www.pinterest.ca/pin/516014069778121841/">Pikachu Image</a>
        <a href="https://hubpages.com/games-hobbies/Pokemon-Charizard-Nicknames">Charzard Image</a>
        <a href = "https://pokemondb.net/pokedex/squirtle">Squirtle Image</a>
        <a href = "https://www.pngitem.com/middle/iJJixJ_charmander-pokemon-png-image-transparent-background-transparent-background/">Charmander Image</a>
        <a href = "https://www.quora.com/Which-is-the-strongest-Pokemon-Charmander-Bulbasaur-or-Squirtle">Bulbasaur Image</a>
        <a href = "https://knowyourmeme.com/memes/furret-walk">Furret Image</a>
        <a href = "https://www.schemecolor.com/pokemon-colors.php">Pokemon Colour Picker</a>
        <a href = "https://www.youtube.com/watch?v=kAmkLHLTeE0">Pokeball Opening Sound</a>
        <a href = "https://www.youtube.com/watch?v=OKdeFZwyLUQ">Charizard Sound Effect</a>
    </string>
    <string name="best_score_for_4_by_6_and_6_pokemons">4 by 6 and 6 Pokemons: 0</string>
    <string name="best_score_for_4_by_6_and_10_pokemons">4 by 6 and 10 Pokemons: 0</string>
    <string name="best_score_for_4_by_6_and_15_pokemons">4 by 6 and 15 Pokemons: 0</string>
    <string name="best_score_for_4_by_6_and_20_pokemons">4 by 6 and 10 Pokemons: 0</string>

    <string name="best_score_for_5_by_10_and_6_pokemons">5 by 10 and 6 Pokemons: 0</string>
    <string name="best_score_for_5_by_10_and_10_pokemons">5 by 10 and 10 Pokemons: 0</string>
    <string name="best_score_for_5_by_10_and_15_pokemons">5 by 10 and 15 Pokemons: 0</string>
    <string name="best_score_for_5_by_10_and_20_pokemons">5 by 10 and 20 Pokemons: 0</string>

    <string name="best_score_for_6_by_15_and_6_pokemons">6 by 15 and 6 Pokemons: 0</string>
    <string name="best_score_for_6_by_15_and_10_pokemons">6 by 15 and 10 Pokemons: 0</string>
    <string name="best_score_for_6_by_15_and_15_pokemons">6 by 15 and 15 Pokemons: 0</string>
    <string name="best_score_for_6_by_15_and_20_pokemons">6 by 15 and 20 Pokemons: 0</string>
    <string name="highest_score">Highest Score: </string>



    <string name="_0">0</string>

</resources>
