<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.Options"
    tools:showIn="@layout/activity_options">

    <TextView
        android:id="@+id/optionsTextView"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/options"
        android:textColor="@color/colorBlack"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/boardSizeSpinner"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/selectBoardSizeTextView"
        app:layout_constraintTop_toBottomOf="@+id/optionsTextView" />

    <TextView
        android:id="@+id/selectBoardSizeTextView"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/board_size"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsTextView" />

    <Spinner
        android:id="@+id/selectMinesSpinner"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numberOfMinesTextView"
        app:layout_constraintTop_toBottomOf="@+id/boardSizeSpinner" />

    <TextView
        android:id="@+id/numberOfMinesTextView"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_pokemons"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectBoardSizeTextView" />

    <TextView
        android:id="@+id/numberOfTImesPlayedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_times_played"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfMinesTextView" />

    <TextView
        android:id="@+id/bestScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/best_scores"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfTImesPlayedTextView" />

    <TextView
        android:id="@+id/playerNumTimesPlayedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_times_played_of_player"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/numberOfTImesPlayedTextView"
        app:layout_constraintTop_toBottomOf="@+id/numberOfMinesTextView" />

    <TextView
        android:id="@+id/playerbestScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/best_score_of_player"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerNumTimesPlayedTextView" />

    <Button
        android:id="@+id/btnResetBestScore"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/round_button_red"
        android:text="@string/reset_best_scores"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfMinesTextView" />

    <Button
        android:id="@+id/btnResetTimesPlayed"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/round_button_red"
        android:text="@string/reset_number_of_times_played"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/btnResetBestScore"
        app:layout_constraintTop_toBottomOf="@+id/numberOfMinesTextView" />

    <TextView
        android:id="@+id/bestScoreFor466TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/best_score_for_4_by_6_and_6_pokemons"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreTextView" />

    <TextView
        android:id="@+id/bestScoreFor4610TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_4_by_6_and_10_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor466TextView" />

    <TextView
        android:id="@+id/bestScoreFor4615TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_4_by_6_and_15_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor4610TextView" />

    <TextView
        android:id="@+id/bestScoreFor4620TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_4_by_6_and_20_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor4615TextView" />

    <TextView
        android:id="@+id/bestScoreFor5106TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/best_score_for_5_by_10_and_6_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/bestScoreFor466TextView"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreTextView" />

    <TextView
        android:id="@+id/bestScoreFor51010TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_5_by_10_and_10_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/bestScoreFor4610TextView"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor5106TextView" />

    <TextView
        android:id="@+id/bestScoreFor51015TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_5_by_10_and_15_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/bestScoreFor4615TextView"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor51010TextView" />

    <TextView
        android:id="@+id/bestScoreFor51020TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_5_by_10_and_20_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/bestScoreFor4620TextView"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor51015TextView" />

    <TextView
        android:id="@+id/bestScoreFor6156TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/best_score_for_6_by_15_and_6_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/bestScoreFor5106TextView"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreTextView" />

    <TextView
        android:id="@+id/bestScoreFor61510TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_6_by_15_and_10_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/bestScoreFor51010TextView"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor6156TextView" />

    <TextView
        android:id="@+id/bestScoreFor61515TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_6_by_15_and_15_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/bestScoreFor51015TextView"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor61510TextView" />

    <TextView
        android:id="@+id/bestScoreFor61520TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/best_score_for_6_by_15_and_20_pokemons"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/bestScoreFor51020TextView"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreFor61515TextView" />

</androidx.constraintlayout.widget.ConstraintLayout>