<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/mainMenu"
        android:layout_width="197dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="Main Menu"
        android:textColor="@color/colorBlack"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/charmander"
        android:text="@string/play_game"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/pikachuImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu" />

    <Button
        android:id="@+id/btnOptions"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/squirtle"
        android:text="@string/options"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/pikachuImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bulb"
        android:text="@string/help"

        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/pikachuImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptions" />

    <ImageView
        android:id="@+id/pikachuImage"
        android:layout_width="242dp"
        android:layout_height="246dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOptions"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu"
        app:layout_constraintVertical_bias="0.266"
        app:srcCompat="@drawable/pikachuimage" />
</androidx.constraintlayout.widget.ConstraintLayout>